# MyDrfFinalPrj

./: .env.sample  Dockerfile  docker-compose.yml  my_test.py  pyproject.toml  requirements.txt  setup.cfg
backend/: manage.py
backend/apps/adds/: apps.py  g4f_cfg.py  middlewares.py  models.py  serializers.py  urls.py  views.py
backend/apps/auth/: urls.py  views.py
backend/apps/catalogs/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  routing.py
backend/apps/users/: apps.py  models.py  serializers.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_configs/: __init__.py  celery_conf.py  channels_conf.py  drf_api_logger_conf.py  drf_conf.py  drf_yasg_conf.py  email_conf.py  graphene_conf.py  jwt_conf.py  users_conf.py
backend/core/: models.py  my_dataclasses.py  pagination.py  serializers.py
backend/core/dataclasses/: user_dataclass.py
backend/core/enums/: common_enums.py  jwt_enums.py  user_enums.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: auth_socket_middleware.py
backend/core/permissions/: user_permissions.py
backend/core/scraper_browser/: my_playwright_browser.py  my_pw_browser.py  my_pw_browser_async.py
backend/core/services/: email_service.py  email_services.py  g4f_service.py  jwt_service.py  jwt_services.py
backend/graphQL/: schema.py
backend/graphQL/gql_types/: user_types.py
backend/graphQL/schemas/: __init__.py  auth_schema.py  user_schema.py
backend/my_apps/adds/: apps.py  middlewares.py  models.py  serializers.py  urls.py  views.py
backend/my_apps/auth/: apps.py  urls.py
backend/my_apps/catalogs/: apps.py  filters.py  serializers.py  views.py
backend/my_apps/users/: apps.py  filters.py  managers.py  pyproject.toml  serializers.py  urls.py  views.py
backend/my_apps/users/migrations/: 0001_initial.py
backend/my_scrapy/my_scrapy/: settings.py
backend/scraper/scraper/: items.py  pipelines.py  settings.py  test.py
backend/templates/: email_register.html
client/: asset-manifest.json  index.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.js  index.tsx  react-app-env.d.ts
(+20 files in other folders)
